[gd_scene load_steps=7 format=3 uid="uid://kqoc0aycgs35"]

[ext_resource type="Script" uid="uid://dljb1yngj8m5g" path="res://src/dialog.gd" id="1_up5xw"]
[ext_resource type="FontFile" uid="uid://cmbwnmrpuigxx" path="res://assets/fonts/FangZhengShuSongJianTi-1.ttf" id="2_ow5ht"]

[sub_resource type="Gradient" id="Gradient_gckm1"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ggi1b"]
gradient = SubResource("Gradient_gckm1")

[sub_resource type="Gradient" id="Gradient_j3y3i"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_up5xw"]
gradient = SubResource("Gradient_j3y3i")

[node name="dialog" type="CanvasLayer"]
layer = 2
script = ExtResource("1_up5xw")

[node name="texture_rect_top" type="TextureRect" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.105
offset_bottom = -0.0400009
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_ggi1b")
expand_mode = 1
stretch_mode = 1

[node name="label_hint_left" type="RichTextLabel" parent="texture_rect_top"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.020000001
anchor_right = 0.18
anchor_bottom = 1.0
offset_left = -0.040000916
offset_right = -0.36001587
theme_override_fonts/normal_font = ExtResource("2_ow5ht")
theme_override_font_sizes/normal_font_size = 23
bbcode_enabled = true
vertical_alignment = 1

[node name="label_hint_right" type="RichTextLabel" parent="texture_rect_top"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.82000005
anchor_right = 0.98
anchor_bottom = 1.0
offset_left = 0.35992432
offset_right = 0.040039063
theme_override_fonts/normal_font = ExtResource("2_ow5ht")
theme_override_font_sizes/normal_font_size = 23
bbcode_enabled = true
horizontal_alignment = 2
vertical_alignment = 1

[node name="label" type="RichTextLabel" parent="texture_rect_top"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.18
anchor_right = 0.82000005
anchor_bottom = 1.0
offset_left = -0.36001587
offset_right = 0.35992432
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_ow5ht")
theme_override_font_sizes/normal_font_size = 23
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="texture_rect_bottom" type="TextureRect" parent="."]
anchors_preset = -1
anchor_top = 0.895
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.039978
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_ggi1b")
expand_mode = 1
stretch_mode = 1

[node name="label" type="RichTextLabel" parent="texture_rect_bottom"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/normal_font = ExtResource("2_ow5ht")
theme_override_font_sizes/normal_font_size = 23
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="texture_rect_full" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_up5xw")
expand_mode = 1
stretch_mode = 1
